scss/_posts-comments.scss
/*post header stuff*/

.post-header .user-flag {
    width: 1.5rem;
    align-self: center;
}

.user-flag {
    color: red;
    margin-left: 5px;
}


article.post>.notifications,
article.post>header,
article.post>.content,
article.post>.toolbar {
    padding: 0 1rem;
}


article.post>.notifications>div:last-child {
    margin-bottom: 1em;
}

article.post>.notifications div {
    color: $darkest-grey;
    margin-bottom: 0.5rem;
    font-size: 0.925rem;
}

article.post>.notifications div a,
article.post>.notifications div a:active,
article.post>.notifications div a:visited {
    color: $darkest-grey;
}

article.post>.notifications div a:hover {
    color: $sweet-red;
}

article.post>.notifications div.recently-commented-notification {
    color: $darker-pink;
}

article.post>.notifications div.recently-commented-notification a,
article.post>.notifications div.recently-commented-notification a:active,
article.post>.notifications div.recently-commented-notification a:visited {
    color: $darker-pink;
}

article.post>.notifications div.recently-commented-notification a:hover {
    color: $sweet-red;
}

article.post>.notifications div.community-notification {
    display: flex;
    align-items: center;
}

article.post>.notifications div.community-notification img {
    width: 20px;
    height: 20px;
    border-radius: 2px;
    margin-right: 5px;
}

article.post>.notifications div.recently-commented-notification a,
article.post>.notifications div.community-notification a,
article.post>.notifications div.boosters-notification a {
    font-weight: 500;
}

article.post>header {
    display: flex;
}

article.post>header img.author-image {
    width: 46px;
    height: 46px;
    border-radius: 5px;
}

article.post>header .post-header-left {
    height: 46px;
    width: 46px;
    margin-right: 5px;
}

article.post>header .post-header-right {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    width: 100%;
    justify-content: center;
}

article.post>header h2.author-name {
    font-size: 1em;
    font-family: 'Ubuntu', sans-serif;
    letter-spacing: 0;
    margin: 0;
    display: flex;
    overflow: hidden;
    margin-bottom: 4px;
    white-space: nowrap;
}

article.post>header .author-display-name,
article.comment>header .author-display-name,
#welcome-message-container>footer .author-display-name {
    font-weight: 500;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-right: 5px;
}

article.post>header .author-display-name a,
article.comment>header .author-display-name a,
#welcome-message-container>footer .author-display-name a,
article.post>header .author-username a,
article.comment>header .author-username a,
#welcome-message-container>footer .author-username a {
    color: $text;
}

article.post>header .author-display-name a:hover,
article.comment>header .author-display-name a:hover,
#welcome-message-container>footer .author-display-name a:hover,
article.post>header .author-username a:hover,
article.comment>header .author-username a:hover,
#welcome-message-container>footer .author-username a:hover {
    color: $sweet-red;
}

article.post>header .author-username,
article.comment>header .author-username,
#welcome-message-container>footer .author-username {
    color: $darkest-grey;
}

article.post>header .author-username:first-child,
article.comment>header .author-username:first-child,
#welcome-message-container>footer .author-username:first-child {
    color: $text;
    font-weight: 500;
}

article.post>header .metadata {
    color: $darkest-grey;
    font-size: 0.85rem;
}

.postAuthorImage {
    width: 46px;
    height: 46px;
    border-radius: 5px;
    display: inline;
    margin-right: 5px;
}

.button.show-boosters-list {
    margin-left: 2px;
    position: relative;
    bottom: 2px;
}

.booster:not(:last-of-type):after {
    content: ', ';
}


/* post body layout + buttons stuff */

article.post {
    padding-top: 1rem;
    border: 1px solid $medium-grey;
    margin-bottom: 1rem;
    background: $element-background;
}

article.post>.content {
    position: relative;
    margin: 1rem 0;
    overflow-wrap: break-word;
}

article.post>.content .content-warning {
    margin-bottom: 0.5rem;
}

.show-more-content {
    display: none;
}

article.post>.toolbar {
    display: flex;
    justify-content: flex-start;
    margin-bottom: 1rem;
    padding-left: 0.65rem;
    max-width: 390px;

    @media screen and (max-width: 576px) {
        max-width: 100%;
        width: 100%;
        justify-content: space-between;
    }
}


article.post:hover {
    box-shadow: $post-shadow;
}

.post-action-button {
    /*um this class was technically deprecated in the new postsV2.handlebars that added threaded comments but the stats page still uses it for some reason*/
    color: #aaa;
}

.button.post-toolbar-button {
    background: $element-background;
    box-shadow: none;
    color: $dark-grey;
    flex: 1;
    display: flex;
    align-items: center;
    width: 40px;
    justify-content: center;
    margin-right: 32px;
    padding: 0;
    &:hover {
        background: $element-background;
        color: $sweet-red;
    }
    @media screen and (max-width: 576px) {
        margin-right: 0;
    }
}

.comments-number {
    font-size: smaller;
    margin-left: 3px;
}

.content-warning {
    font-weight: 500;
}

.abbreviated-content {
    height: 20rem;
    overflow: hidden;
}

.abbreviated-content:not(.content-warning-content)::after {
    content: "";
    position: absolute;
    z-index: 1;
    top: 17.5rem;
    left: 0;
    pointer-events: none;
    width: 100%;
    height: 3rem;
}

.post .abbreviated-content:not(.content-warning-content)::after {
    background-image: linear-gradient(to bottom, rgba($element-background, 0), rgba($element-background, 1) 90%);
}

.comment .abbreviated-content:not(.content-warning-content)::after {
    background-image: linear-gradient(to bottom, rgba($element-background, 0), rgba($lightest-grey, 1) 90%);
}
/* ... */

